# Court-of-the-9-Moons-MUD

./: .gitignore  CMakeLists.txt  README.md
doc/: FAQ.txt  README.ARC  admin.txt  building.txt  coding.txt  releases.txt  socials.txt  utils.txt
lib/misc/: messages  socials.new
lib/plrfiles/: index
lib/plrfiles/K-O/: namorham.plr
lib/text/: credits  greetings  imotd  info  motd  news
lib/text/help/: help  help.hlp
lib/world/mob/: 0.mob  1.mob  101.mob  104.mob  106.mob  107.mob  11.mob  115.mob  117.mob  118.mob  12.mob  120.mob  13.mob  140.mob  150.mob  16.mob  17.mob  175.mob  19.mob  2.mob  20.mob  200.mob  201.mob  211.mob  22.mob  220.mob  232.mob  233.mob  234.mob  235.mob  236.mob  238.mob  239.mob  240.mob  241.mob  247.mob  25.mob  250.mob  257.mob  260.mob  (+54 more)
lib/world/shp/: 140.shp  257.shp  274.shp  275.shp  287.shp  30.shp  index.mini
lib/world/trg/: 0.trg  1.trg  103.trg  104.trg  117.trg  118.trg  12.trg  120.trg  13.trg  130.trg  150.trg  19.trg  2.trg  238.trg  25.trg  288.trg  3.trg  30.trg  41.trg  43.trg  50.trg  51.trg  52.trg  53.trg  54.trg  61.trg  63.trg  65.trg  71.trg  72.trg  83.trg
lib/world/wld/: 0.wld  1.wld  100.wld  103.wld  104.wld  106.wld  107.wld  11.wld  115.wld  117.wld  118.wld  12.wld  120.wld  125.wld  130.wld  140.wld  15.wld  150.wld  16.wld  169.wld  17.wld  175.wld  18.wld  186.wld  187.wld  19.wld  2.wld  20.wld  201.wld  211.wld  22.wld  220.wld  232.wld  233.wld  234.wld  235.wld  236.wld  238.wld  239.wld  240.wld  (+133 more)
lib/world/zon/: 0.zon  1.zon  104.zon  106.zon  115.zon  140.zon  16.zon  17.zon  232.zon  238.zon  247.zon  253.zon  254.zon  257.zon  26.zon  267.zon  268.zon  271.zon  278.zon  287.zon  292.zon  30.zon  301.zon  311.zon  313.zon  314.zon  315.zon  316.zon  325.zon  326.zon  4.zon  53.zon  55.zon  556.zon  7.zon  78.zon  index.mini
proj/Circle/: Circle.sln  Circle.vcproj
proj/InstallCircle/: InstallCircle.vdproj
src/: CharacterAttributes.cpp  CharacterAttributes.h  Makefile  Makefile.amiga  Makefile.arc  Makefile.bcc  Makefile.bcc55  Makefile.in  Makefile.lcc  Makefile.msvc  Makefile.os2  act.comm.cpp  act.h  act.informative.c  act.informative.cpp  act.item.cpp  act.movement.c  act.movement.cpp  act.offensive.cpp  act.other.cpp  act.social.cpp  act.wizard.c  act.wizard.cpp  aedit.cpp  asciimap.cpp  asciimap.h  ban.cpp  ban.h  boards.cpp  boards.h  bsd-snprintf.cpp  bsd-snprintf.h  castle.cpp  cedit.cpp  class.cpp  class.h  comm.c  comm.cpp  comm.h  conf.h  (+113 more)
src/ninemoons/VS08/: ninemoons.sln  ninemoons.vcproj
src/ninemoons/VS13/: ninemoons.sln  ninemoons.vcxproj
src/ninemoons/VS13/Test/: attrtest.vcxproj
src/test/: attrtest.cpp  colours.sh  stringtrim.c  test_utils.cpp  test_utils.h
src/util/: Makefile.in  asciipasswd.cpp  autowiz.cpp  plrtoascii.cpp  rebuildAsciiIndex.cpp  rebuildMailIndex.cpp  shopconv.cpp  sign.cpp  split.cpp  webster.cpp  wld2html.cpp
